Fix pagination gap

--- a/src/qComponents/QPagination/src/q-pagination.scss
+++ b/src/qComponents/QPagination/src/q-pagination.scss
@@ -21,7 +21,7 @@
   display: inline-grid;
   margin-top: 24px;
   white-space: nowrap;
-  column-gap: 8px;
+  grid-gap: 8px;
 
   &__btn {
     box-sizing: border-box;
